Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/User_Adoption__c.object
<CustomObject>
    <description>Custom object to import login history and use for reporting purposes.</description>
    <fields>
        <fullName>APITYPE__c</fullName>
        <label>API Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Version__c</fullName>
        <label>API Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPLICATION__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AppExchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appirio Cloud Enablement Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CardShark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter for Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter for iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect for Microsoft Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contactivity for Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dragon For Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ForcePad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RingDNA iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RocketSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce for Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Help &amp; Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Mobile Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Logger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BROWSER__c</fullName>
        <label>Browser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENTVERSION__c</fullName>
        <label>Client Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>TEXT( USER__r.District__c )</formula>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOGINTIME__c</fullName>
        <label>Login Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOGINTYPE__c</fullName>
        <label>Login Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Apex API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Access 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Access Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOGINURL__c</fullName>
        <label>Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>USER__r.Manager.FirstName &amp; &quot; &quot; &amp;USER__r.Manager.LastName</formula>
        <inlineHelpText>The person that this user directly reports to.</inlineHelpText>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLATFORM__c</fullName>
        <label>Platform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>USER__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(USER__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>USER__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOURCEIP__c</fullName>
        <label>Soure IP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>Login Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed: Computer activation required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed: Invalid Timestamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Lockout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown exception: 1721</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User is Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adoptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Adoption</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Login Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Adoption</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>